# stm32-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  STM32F767ZI.ld  stm32f7.openocd  stm32f7x7.svd
default/vscode/: launch.json  tasks.json
include/: ringbuffer.h  usbcdc.h
lib/FreeRTOS-Kernel/include/: FreeRTOSConfig.h  _FreeRTOSConfig.h  portmacro.h
lib/FreeRTOS-Kernel/src/: heap_4.c  list.c  port.c  tasks.c
lib/lwmem/include/: lwmem_config.h
lib/lwmem/src/: heap.c  lwmem.c  lwmem_sys.c
src/: main.c  usbcdc.c
